--- a/infra-nginx/nginx.conf
+++ b/infra-nginx/nginx.conf
@@ -28,20 +28,6 @@ http {
     server {
         server_name zstoreit.com;
         listen 80;
-        listen 443 ssl;
-
-        ssl_certificate         /etc/letsencrypt/live/zstoreit.info/fullchain.pem;
-        ssl_certificate_key     /etc/letsencrypt/live/zstoreit.info/privkey.pem;
-        ssl_trusted_certificate /etc/letsencrypt/live/zstoreit.info/fullchain.pem;
-        ssl_session_cache shared:SSL:50m;
-        ssl_session_timeout 5m;
-        ssl_stapling on;
-        ssl_stapling_verify on;
-
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
-
-        ssl_prefer_server_ciphers on;
 
         location / {
             proxy_pass http://app:8000;
@@ -51,13 +37,40 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
-
-        location ~ /\.well-known/acme-challenge {
-            root /etc/nginx/pages/certbot;
-        }
-
-        location / {
-            rewrite ^ https://zstoreit.info$request_uri? permanent;
-        }
     }
+
+# server {
+#     server_name zstoreit.com;
+#     listen 443 ssl;
+#
+#     ssl_certificate         /etc/letsencrypt/live/zstoreit.info/fullchain.pem;
+#     ssl_certificate_key     /etc/letsencrypt/live/zstoreit.info/privkey.pem;
+#     ssl_trusted_certificate /etc/letsencrypt/live/zstoreit.info/fullchain.pem;
+#     ssl_session_cache shared:SSL:50m;
+#     ssl_session_timeout 5m;
+#     ssl_stapling on;
+#     ssl_stapling_verify on;
+#
+#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+#     ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+#
+#     ssl_prefer_server_ciphers on;
+#
+#     location / {
+#         proxy_pass http://app:8000;
+#
+#         proxy_set_header   Host $host;
+#         proxy_set_header   X-Real-IP $remote_addr;
+#         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header   X-Forwarded-Host $server_name;
+#     }
+#
+#     location ~ /\.well-known/acme-challenge {
+#         root /etc/nginx/pages/certbot;
+#     }
+#
+#     location / {
+#         rewrite ^ https://zstoreit.info$request_uri? permanent;
+#     }
+# }
 }
