--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - 443:443
     volumes:
       - ./infra-nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./etc/nginx/pages/:/etc/nginx/pages/
       - .letsencrypt.sh:/etc/cron.monthly/letsencrypt.sh
     depends_on:
       - app
