--- a/infra-nginx/nginx.conf
+++ b/infra-nginx/nginx.conf
@@ -37,6 +37,10 @@ http {
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
         }
+
+        location ~ /\.well-known/acme-challenge {
+            root /etc/nginx/pages/certbot;
+        }
     }
 
 # server {
