--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,13 +18,24 @@ services:
       - 80:80
       - 443:443
     volumes:
-      - ./infra-nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./etc/nginx/pages/:/etc/nginx/pages/
-      - .letsencrypt.sh:/etc/cron.monthly/letsencrypt.sh
+      - ./data/nginx:/etc/nginx/conf.d
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
     depends_on:
       - app
     networks:
       - custom_network
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  certbot:
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
+    networks:
+      - custom_network
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
   custom_network:
