--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,4 +5,6 @@ WORKDIR /home/project/app
 COPY requirements.txt /home/project/app
 RUN pip install --no-cache-dir -r requirements.txt
 
+ENV PYTHONPATH /home/project/app
+
 COPY . /home/project/app
