--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /home/project
 COPY requirements.txt /home/project
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENV PYTHONPATH /home/project
+# ENV PYTHONPATH /home/project
+ENV PYTHONPATH="$PYTHONPATH:/home/project"
 
 COPY . /home/project
