--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,9 @@ services:
       - 8000:8000
     networks:
       - custom_network
-    command: gunicorn -w 1 -b :8000 app:app
+    environment:
+      PYTHONPATH: '/home/project' 
+    command: gunicorn -w 1 -b :8000 app:app --pythonpath "/home/project"
 
   nginx:
     image: nginx:alpine
