--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -18,6 +18,7 @@ services:
       - 80:80
       - 443:443
     volumes:
+      - ./infra-nginx/data/nginx.conf:/etc/nginx/nginx.conf
       - ./infra-nginx/data/conf.local:/etc/nginx/conf.d
     depends_on:
       - app
