--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - 8000:8000
     networks:
       - custom_network
-    command: gunicorn -w 1 -b :8000 --log-level=DEBUG app:app --timeout 90
+    command: gunicorn -w 1 -b :8000 app:app
 
   nginx:
     image: nginx:alpine
