--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,6 +8,8 @@ services:
     build: ./project
     ports:
       - 8000:8000
+    depends_on:
+      - redis
     networks:
       - custom_network
     command: gunicorn -w 1 -b :8000 app:app
@@ -25,6 +27,14 @@ services:
     networks:
       - custom_network
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  redis:
+    image: redis:3.2.11
+    container_name: redis
+    networks:
+      - custom_network
+    ports:
+      - 6379:6379
 
 networks:
   custom_network:
