--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.6.0
 asn1crypto==0.24.0
 certifi==2019.3.9
 cffi==1.12.3
@@ -5,6 +6,7 @@ chardet==3.0.4
 Click==7.0
 cryptography==2.7
 Flask==1.0.3
+Flask-APScheduler==1.11.0
 future==0.17.1
 gunicorn==19.9.0
 idna==2.8
@@ -14,7 +16,11 @@ MarkupSafe==1.1.1
 pycoingecko==0.3.0
 pycparser==2.19
 pyTelegramBotAPI==3.6.6
+python-dateutil==2.8.0
+pytz==2019.1
+redis==3.2.1
 requests==2.7.0
 six==1.12.0
+tzlocal==1.5.1
 urllib3==1.25.3
 Werkzeug==0.15.4
