--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - custom_network
     ports:
       - 6379:6379
+    command: redis-server --requirepass redis_password
 
   nginx:
     image: nginx:alpine
